--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@nestjs/common": "^10.3.2",
     "@nestjs/core": "^10.3.2",
     "@nestjs/platform-express": "^10.3.2",
+    "@supabase/supabase-js": "^2.45.4",
+    "dotenv": "^16.4.5",
     "lentera-backend": "file:",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1"
@@ -43,6 +45,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.7",
     "prettier": "^3.2.5",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.4",
